feat: adding properties on usuario and cliente
Adding access level and access bus to endPoints
